# naccbis

./: .coveragerc  .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
Cleaning/: CleanFunctions.py  CleanGameLogs.py  CleanIndividualOffense.py  CleanIndividualPitching.py  CleanTeamOffense.py  CleanTeamPitching.py  DumpNames.py  GenerateIds.py  LeagueTotals.py  clean.py  design.md  metrics.py  tests.py  utils.py
Common/: metrics.py  tests.py  utils.py
Scraping/: ScrapeBase.py  ScrapeFunctions.py  ScrapeGameLog.py  ScrapeIndividualOffense.py  ScrapeIndividualPitching.py  ScrapeTeamFielding.py  ScrapeTeamOffense.py  ScrapeTeamPitching.py  __init__.py  config.py  scrape.py  tests.py
db/: clear_tables.sql  create_table.py  levenshtein.sql  migration_2019-12-02.sql  name_corrections.csv  nicknames.csv  raw_batters_conference.py  raw_batters_conference.sql  raw_batters_conference_inseason.sql  raw_batters_overall.py  raw_batters_overall.sql  raw_batters_overall_inseason.sql  raw_game_log_fielding.sql  raw_game_log_fielding_inseason.sql  raw_game_log_hitting.sql  raw_game_log_hitting_inseason.sql  raw_game_log_pitching.sql  raw_game_log_pitching_inseason.sql  raw_pitchers_conference.sql  raw_pitchers_conference_inseason.sql  raw_pitchers_overall.py  raw_pitchers_overall.sql  raw_pitchers_overall_inseason.sql  raw_team_fielding_conference.sql  raw_team_fielding_conference_inseason.sql  raw_team_fielding_overall.sql  raw_team_fielding_overall_inseason.sql  raw_team_offense_conference.py  raw_team_offense_conference.sql  raw_team_offense_conference_inseason.sql  same_names.sql  (+12 more)
(+100 files in other folders)
