[metadata]
name = naccbis
version = attr: naccbis.__init__.__version__
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    naccbis = naccbis.scripts.cli:cli

[tool:pytest]
testpaths = tests
markers =
    integration: marks tests as integration tests
addopts =
    --tb=short
    --strict-config
    --strict-markers
    -ra
xfail_strict = true

[coverage:run]
source = naccbis, tests
omit = naccbis/scripts/verify.py
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    raise NotImplementedError
    @(abc\.)?abstractmethod
skip_covered = True
fail_under = 65  # ideally this would be 100

[flake8]
# for compatibility with Black, see https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
max-complexity = 10
extend-ignore =
    # whitespace before ':'
    E203,
    # line length (handled mostly by Black)
    E501,
    # do not perform function calls in argument defaults (for FastAPI)
    B008,

[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True
follow_imports = silent
check_untyped_defs = True
warn_unreachable = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
show_error_codes = True

[isort]
profile = black
